kustomize/base/02-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend
  labels:
    app: k8s-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
      - name: k8s-frontend
        image: phiroict/k8s-test-frontend@sha256:8a0b8355195f76dc80626bafac7b2f9a3a1a8b64ae2cd715bb8ae75446fa7556
        ports:
        - containerPort: 5000
